- minor spelling corrections